Moved the current temperature, city and details to new positions using css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
     <link rel="stylesheet" href="index.css" />
     <title>My weather application</title>
   </head>
@@ -24,22 +28,25 @@
             class="search-input"
             id="search-input"
           />
-          <input type="submit" value="Search" class="search-button" />
+          <span class="material-symbols-outlined">search</span>
         </form>
       </header>
       <main>
         <div class="current-weather">
-          <div>
-            <h1 class="current-city" id="current-city">Paris</h1>
-            <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
-            </p>
-          </div>
           <div class="current-temperature">
             <span class="current-temperature-icon">☀️</span
             ><span id="temp" class="current-temperature-value">24</span
             ><span class="current-temperature-unit">°C</span>
+            <p class="current-details">
+              <span id="current-date">Friday 15:18</span><br />moderate rain
+              <br />
+              Humidity: <strong>87%</strong><br />
+              Wind:
+              <strong>7.2km/h</strong>
+            </p>
+          </div>
+          <div>
+            <h1 class="current-city" id="current-city">Paris</h1>
           </div>
         </div>
       </main>
