--- a/index.html
+++ b/index.html
@@ -53,9 +53,17 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Matt Delac</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/N-Eiman" target="_blank"
+            >Thakane J. Eiman</a
+          >
+          and is
+          <a href="https://github.com/N-Eiman/Weather-App" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://check-city-w.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
