changed the color scheme of the website, styled the ul and readjusted potitions of the temperature and city elements

--- a/index.html
+++ b/index.html
@@ -48,6 +48,80 @@
           <div>
             <h1 class="current-city" id="current-city">Paris</h1>
           </div>
+
+          <span class="days-weather-forecast">
+            <ul>
+              <li>
+                <div id="day-temp">
+                  Sun
+                  <br />
+                  🌧️
+                  <br />
+                  <strong>17°12°</strong>
+                </div>
+              </li>
+
+              <li>
+                <div id="day-temp">
+                  Mon
+                  <br />
+                  🌧️
+                  <br />
+                  <strong>17°12°</strong>
+                </div>
+              </li>
+
+              <li>
+                <div id="day-temp">
+                  Tue
+                  <br />
+                  🌧️
+                  <br />
+                  <strong>17°12°</strong>
+                </div>
+              </li>
+
+              <li>
+                <div id="day-temp">
+                  Wed
+                  <br />
+                  🌧️
+                  <br />
+                  <strong>17°12°</strong>
+                </div>
+              </li>
+
+              <li>
+                <div id="day-temp">
+                  Thu
+                  <br />
+                  🌧️
+                  <br />
+                  <strong>17°12°</strong>
+                </div>
+              </li>
+
+              <li>
+                <div id="day-temp">
+                  Fri
+                  <br />
+                  🌧️
+                  <br />
+                  <strong>17°12°</strong>
+                </div>
+              </li>
+
+              <li>
+                <div id="day-temp">
+                  Sat
+                  <br />
+                  🌧️
+                  <br />
+                  <strong>17°12°</strong>
+                </div>
+              </li>
+            </ul>
+          </span>
         </div>
       </main>
       <footer>
