--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
       <main>
         <div class="current-weather">
           <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span
+            <span class="current-temperature-icon" id="icon">☀️</span
             ><span id="temp" class="current-temperature-value">24</span
             ><span class="current-temperature-unit">°C</span>
             <p class="current-details">
               <span id="current-date">Friday 15:18</span><br />moderate rain
               <br />
-              Humidity: <strong>87%</strong><br />
+              Humidity: <strong id="humidity">87%</strong><br />
               Wind:
-              <strong>7.2km/h</strong>
+              <strong id="wind">7.2km/h</strong>
             </p>
           </div>
           <div>
