added signs to humidity and wind and updates to time data

--- a/index.html
+++ b/index.html
@@ -35,18 +35,20 @@
         <div class="current-weather">
           <div class="current-temperature">
             <span class="current-temperature-icon" id="icon">☀️</span
-            ><span id="temp" class="current-temperature-value">24</span
+            ><span id="temp" class="current-temperature-value"></span
             ><span class="current-temperature-unit">°C</span>
             <p class="current-details">
-              <span id="current-date">Friday 15:18</span><br />moderate rain
+              <span id="current-date"></span><br /><span
+                id="weather-condition"
+              ></span>
               <br />
-              Humidity: <strong id="humidity">87%</strong><br />
+              Humidity: <strong id="humidity"></strong><br />
               Wind:
-              <strong id="wind">7.2km/h</strong>
+              <strong id="wind"></strong>
             </p>
           </div>
           <div>
-            <h1 class="current-city" id="current-city">Paris</h1>
+            <h1 class="current-city" id="current-city"></h1>
           </div>
 
           <span class="days-weather-forecast">
