--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <main>
         <div class="current-weather">
           <div class="current-temperature">
-            <span class="current-temperature-icon" id="icon">☀️</span
+            <span class="current-temperature-icon" id="icon"></span
             ><span id="temp" class="current-temperature-value"></span
             ><span class="current-temperature-unit">°C</span>
             <p class="current-details">
