removed the days forecast elements, and restyled other elements

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
       <main>
         <div class="current-weather">
           <div class="current-temperature">
-            <span class="current-temperature-icon" id="icon"></span
+            <span id="icon"></span
             ><span id="temp" class="current-temperature-value"></span
             ><span class="current-temperature-unit">°C</span>
             <p class="current-details">
               <span id="current-date"></span><br /><span
+                class="condition"
                 id="weather-condition"
               ></span>
               <br />
@@ -51,10 +52,7 @@
             <h1 class="current-city" id="current-city"></h1>
           </div>
 
-          <span class="days-weather-forecast">
-            <ul>
-              <li>
-                <div id="day-temp">
+          <!-- <div id="day-temp">
                   Sun
                   <br />
                   🌧️
@@ -123,7 +121,7 @@
                 </div>
               </li>
             </ul>
-          </span>
+-->
         </div>
       </main>
       <footer>
