added a click event for the search icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             class="search-input"
             id="search-input"
           />
-          <span class="material-symbols-outlined">search</span>
+          <span class="material-symbols-outlined" id="search">search</span>
         </form>
       </header>
       <main>
